# template

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  STANDARDS.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-c.yml  ci-python.yml  ci-scheme.yml  ci.yml  docker-publish.yml  release.yml
examples/: hello.scm
scripts/: fetch-s7.sh
tests/: smoke.scm
